syntax = "proto3";

package auth;

option go_package = "gen/go/auth;authv1";


service Auth {
    rpc Validate(ValidateRequest) returns (ValidateResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}


message ValidateRequest {
    string token = 1;
}
message ValidateResponse {
    bool valid = 1;
    string error = 2;
}

message AuthenticateRequest {
    string login = 1;
    string key = 2;
}
message AuthenticateResponse {
    bool success = 1;      // Успешно ли
    string token = 2;
    string error = 3;      // Ошибка, если success=false
}